Fix T79254: FCurve editor crash when zooming out to limit